Move responsibility for timezone caption to clock.ts. Fix bug in placement of moonphase time. Tweak presentation of rainfall/snowfall totals. Tweak sunrise/sunset layout. Improve layout on smaller displays. Move scripts to <head> instead of <body>.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,6 +51,16 @@ body {
   bottom: 0;
 }
 
+@media only screen and (max-height: 600px) {
+  #marquee {
+    right: 128px;
+  }
+
+  .darksky {
+    zoom: 0.75;
+  }
+}
+
 #clock-container {
   display: inline-block;
   position: absolute;
